@@ -301,6 +301,11 @@ o base64dec [-w] [-f] <string or filepath>
 
 o base64dec [-w] [-f] <string or filepath>
 
+o basename <path> [<suffix>]
+
+  Extract the final string from a <path> by removing the preceding path
+  segments and (optionally) removing any trailing <suffix>.
+
 o break
 
   The break command is only meaningful within the body of the a while or
@@ -412,6 +417,11 @@ o df
       64        6        6         0 /etc
      512      985        2       983 /tmp
   nsh>
+
+o dirname <path>
+
+  Extract the path string leading up to the full <path> by removing
+  the final directory or file name.
 
 o echo [<string|$name> [<string|$name>...]]
 
@@ -1000,13 +1010,15 @@ Command Dependencies on Configuration Settings
   addroute   CONFIG_NET && CONFIG_NET_ROUTE
   base64dec  CONFIG_NETUTILS_CODECS && CONFIG_CODECS_BASE64
   base64enc  CONFIG_NETUTILS_CODECS && CONFIG_CODECS_BASE64
+  basename   --
   break      !CONFIG_NSH_DISABLESCRIPT && !CONFIG_NSH_DISABLE_LOOPS
   cat        CONFIG_NFILE_DESCRIPTORS > 0
   cd         !CONFIG_DISABLE_ENVIRON && CONFIG_NFILE_DESCRIPTORS > 0
   cp         CONFIG_NFILE_DESCRIPTORS > 0
   dd         CONFIG_NFILE_DESCRIPTORS > 0
-  delrout    CONFIG_NET && CONFIG_NET_ROUTE
+  delroute   CONFIG_NET && CONFIG_NET_ROUTE
   df         !CONFIG_DISABLE_MOUNTPOINT && CONFIG_NFILE_DESCRIPTORS > 0 && CONFIG_FS_READABLE (see note 3)
+  dirname    --
   echo       --
   exec       --
   exit       --
@@ -1069,23 +1081,24 @@ settings.  All of these settings make the configuration of NSH potentially compl
 also allow it to squeeze into very small memory footprints.
 
   CONFIG_NSH_DISABLE_ADDROUTE,  CONFIG_NSH_DISABLE_BASE64DEC, CONFIG_NSH_DISABLE_BASE64ENC,
-  CONFIG_NSH_DISABLE_CAT,       CONFIG_NSH_DISABLE_CD,        CONFIG_NSH_DISABLE_CP,
-  CONFIG_NSH_DISABLE_DD,        CONFIG_NSH_DISABLE_DELROUTE,  CONFIG_NSH_DISABLE_DF,
-  CONFIG_NSH_DISABLE_ECHO,      CONFIG_NSH_DISABLE_EXEC,      CONFIG_NSH_DISABLE_EXIT,
-  CONFIG_NSH_DISABLE_FREE,      CONFIG_NSH_DISABLE_GET,       CONFIG_NSH_DISABLE_HELP,
-  CONFIG_NSH_DISABLE_HEXDUMP,   CONFIG_NSH_DISABLE_IFCONFIG,  CONFIG_NSH_DISABLE_IFUPDOWN,
-  CONFIG_NSH_DISABLE_KILL,      CONFIG_NSH_DISABLE_LOSETUP,   CONFIG_NSH_DISABLE_LS,
-  CONFIG_NSH_DISABLE_MD5        CONFIG_NSH_DISABLE_MB,        CONFIG_NSH_DISABLE_MKDIR,
-  CONFIG_NSH_DISABLE_MKFATFS,   CONFIG_NSH_DISABLE_MKFIFO,    CONFIG_NSH_DISABLE_MKRD,
-  CONFIG_NSH_DISABLE_MH,        CONFIG_NSH_DISABLE_MOUNT,     CONFIG_NSH_DISABLE_MW,
-  CONFIG_NSH_DISABLE_MV,        CONFIG_NSH_DISABLE_NFSMOUNT,  CONFIG_NSH_DISABLE_NSLOOKUP,
-  CONFIG_NSH_DISABLE_POWEROFF,  CONFIG_NSH_DISABLE_PS,        CONFIG_NSH_DISABLE_PING,
-  CONFIG_NSH_DISABLE_PING6,     CONFIG_NSH_DISABLE_PUT,       CONFIG_NSH_DISABLE_PWD,
-  CONFIG_NSH_DISABLE_REBOOT,    CONFIG_NSH_DISABLE_RM,        CONFIG_NSH_DISABLE_RMDIR,
-  CONFIG_NSH_DISABLE_SET,       CONFIG_NSH_DISABLE_SH,        CONFIG_NSH_DISABLE_SHUTDOWN,
-  CONFIG_NSH_DISABLE_SLEEP,     CONFIG_NSH_DISABLE_TEST,      CONFIG_NSH_DISABLE_UMOUNT,
-  CONFIG_NSH_DISABLE_UNSET,     CONFIG_NSH_DISABLE_URLDECODE, CONFIG_NSH_DISABLE_URLENCODE,
-  CONFIG_NSH_DISABLE_USLEEP,    CONFIG_NSH_DISABLE_WGET,      CONFIG_NSH_DISABLE_XD
+  CONFIG_NSH_DISABLE_BASENAME,  CONFIG_NSH_DISABLE_CAT,       CONFIG_NSH_DISABLE_CD,
+  CONFIG_NSH_DISABLE_CP,        CONFIG_NSH_DISABLE_DD,        CONFIG_NSH_DISABLE_DELROUTE,
+  CONFIG_NSH_DISABLE_DF,        CONFIG_NSH_DISABLE_DIRNAME,   CONFIG_NSH_DISABLE_ECHO,
+  CONFIG_NSH_DISABLE_EXEC,      CONFIG_NSH_DISABLE_EXIT,      CONFIG_NSH_DISABLE_FREE,
+  CONFIG_NSH_DISABLE_GET,       CONFIG_NSH_DISABLE_HELP,      CONFIG_NSH_DISABLE_HEXDUMP,
+  CONFIG_NSH_DISABLE_IFCONFIG,  CONFIG_NSH_DISABLE_IFUPDOWN,  CONFIG_NSH_DISABLE_KILL,
+  CONFIG_NSH_DISABLE_LOSETUP,   CONFIG_NSH_DISABLE_LS,        CONFIG_NSH_DISABLE_MD5,
+  CONFIG_NSH_DISABLE_MB,        CONFIG_NSH_DISABLE_MKDIR,     CONFIG_NSH_DISABLE_MKFATFS,
+  CONFIG_NSH_DISABLE_MKFIFO,    CONFIG_NSH_DISABLE_MKRD,      CONFIG_NSH_DISABLE_MH,
+  CONFIG_NSH_DISABLE_MOUNT,     CONFIG_NSH_DISABLE_MW,        CONFIG_NSH_DISABLE_MV,
+  CONFIG_NSH_DISABLE_NFSMOUNT,  CONFIG_NSH_DISABLE_NSLOOKUP,  CONFIG_NSH_DISABLE_POWEROFF,
+  CONFIG_NSH_DISABLE_PS,        CONFIG_NSH_DISABLE_PING,      CONFIG_NSH_DISABLE_PING6,
+  CONFIG_NSH_DISABLE_PUT,       CONFIG_NSH_DISABLE_PWD,       CONFIG_NSH_DISABLE_REBOOT,
+  CONFIG_NSH_DISABLE_RM,        CONFIG_NSH_DISABLE_RMDIR,     CONFIG_NSH_DISABLE_SET,
+  CONFIG_NSH_DISABLE_SH,        CONFIG_NSH_DISABLE_SHUTDOWN,  CONFIG_NSH_DISABLE_SLEEP,
+  CONFIG_NSH_DISABLE_TEST,      CONFIG_NSH_DISABLE_UMOUNT,    CONFIG_NSH_DISABLE_UNSET,
+  CONFIG_NSH_DISABLE_URLDECODE, CONFIG_NSH_DISABLE_URLENCODE, CONFIG_NSH_DISABLE_USLEEP,
+  CONFIG_NSH_DISABLE_WGET,      CONFIG_NSH_DISABLE_XD
 
 Verbose help output can be suppressed by defining CONFIG_NSH_HELP_TERSE.  In that
 case, the help command is still available but will be slightly smaller.
